@@ -19,7 +19,6 @@ void handle_query(char *data, int len);
 void send_reply(const char *text);
 void PlayerCmd(unsigned char *data, int len);
 void item_actions(item *op);
-void Item1Cmd(unsigned char *data, int len);
 void Item2Cmd(unsigned char *data, int len);
 void UpdateItemCmd(unsigned char *data, int len);
 void DeleteItem(unsigned char *data, int len);
@@ -28,8 +27,6 @@ void AddspellCmd(unsigned char *data, int len);
 void UpdspellCmd(unsigned char *data, int len);
 void DeleteSpell(unsigned char *data, int len);
 void NewmapCmd(unsigned char *data, int len);
-void Map1Cmd(unsigned char *data, int len);
-void Map1aCmd(unsigned char *data, int len);
 void Map2Cmd(unsigned char *data, int len);
 void map_scrollCmd(char *data, int len);
 int ExtSmooth(unsigned char *data, int len, int x, int y, int layer);
@@ -44,10 +41,7 @@ void requestsmooth(int pnum);
 void requestface(int pnum, char *facename);
 void finish_face_cmd(int pnum, uint32 checksum, int has_sum, char *face, int faceset);
 void reset_image_cache_data(void);
-void FaceCmd(unsigned char *data, int len);
-void Face1Cmd(unsigned char *data, int len);
 void Face2Cmd(uint8 *data, int len);
-void ImageCmd(uint8 *data, int len);
 void Image2Cmd(uint8 *data, int len);
 void display_newpng(int face, uint8 *buf, int buflen, int setnum);
 void get_image_info(uint8 *data, int len);
